--- a/src/templates/asistencia.html
+++ b/src/templates/asistencia.html
@@ -5,6 +5,42 @@
         <h1>Asistencia</h1>
         <p>Asistencia</p>
 
+        <div class="col-md-7">
+            <table class="table table-striped table-bordered bg-white table-sm">
+                <thead>
+                    <tr>
+                        <td>Codigo</td>
+                        <td>idUnidad</td>
+                        <td>Inscripcion</td>
+                        <td>Nacimiento</td>
+                        <td>Correo</td>
+                        <td>Nombre</td>
+                        <td>Apellido</td>
+                        <td>Obra</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for estudiante in estudiantes %}
+                    <tr>
+                        <td>{{ estudiante.0 }} </td>
+                        <td>{{ estudiante.1 }} </td>
+                        <td>{{ estudiante.2 }} </td>
+                        <td>{{ estudiante.3 }} </td>
+                        <td>{{ estudiante.4 }} </td>
+                        <td>{{ estudiante.5 }} </td>
+                        <td>{{ estudiante.6 }} </td>
+                        <td>{{ estudiante.7 }} </td>
+                        <td>
+                            <a href="/edit/{{estudiante.0}}" class="btn btn-secondary">Asistencia</a>
+                            <a href="/delete/{{estudiante.0}}" class="btn btn-secondary">Eliminar</a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+        
+                </tbody>
+            </table>
+        
+        </div>
 
     {% endblock %}
 </body>
