--- a/src/templates/certificados.html
+++ b/src/templates/certificados.html
@@ -2,8 +2,8 @@
     {% extends 'layout.html' %}
     {% block body %}
     
-        <h1>Viaticos</h1>
-        <p>Viaticos</p>
+        <h1>Certificados</h1>
+        <p>Certificados</p>
 
         <div class="col-md-7">
             {% with messages = get_flashed_messages() %}
@@ -21,14 +21,8 @@
             <table class="table table-striped table-bordered bg-white table-sm">
                 <thead>
                     <tr>
-                        <td>Codigo</td>
-                        <td>Nombre</td>
-                        <td>Apellido</td>
-                        <td>Correo</td>
-                        <td>Obra Interpretada</td>
-                        <td>Personaje Interpretado</td>
-                        <td>Horas de Participacion</td>
-                        <td></td>
+                        <td>Obra</td>
+                        <td>Participacion</td>
                     </tr>
                 </thead>
                 <tbody>
@@ -36,17 +30,15 @@
                     <tr>
                         <td>{{ estudiante.0 }} </td>
                         <td>{{ estudiante.1 }} </td>
-                        <td>{{ estudiante.2 }} </td>
-                        <td>{{ estudiante.3 }} </td>
-                        <td>{{ estudiante.4 }} </td>
-                        <td>{{ estudiante.5 }} </td>
-                        <td>{{ estudiante.6 }} </td>
+                        <td>
+                            <a href="/certificados/{{estudiante.0}}" class="btn btn-secondary">Generar Certificado</a>
+                        </td>
                     </tr>
                     {% endfor %}
         
                 </tbody>
             </table>
-            <a href="/viaticos/" class="btn btn-secondary">Liquidacion</a>
+        
         </div>
 
     {% endblock %}
