agrupacion vista inicio con asistencia, viaticos, certificados

--- a/src/templates/viaticos.html
+++ b/src/templates/viaticos.html
@@ -46,7 +46,7 @@
         
                 </tbody>
             </table>
-            <a href="/viaticos/" class="btn btn-secondary">Liquidacion</a>
+            <a href="/viaticos_pdf" class="btn btn-secondary">Liquidacion</a>
         </div>
 
     {% endblock %}
