--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -16,7 +16,7 @@
           {% endfor %}
 
           
-          <a class="navbar-brand" href="/"> Docente: </a>
+          <a class="navbar-brand" href="/"> Docente: {{ Docente.0.2 +' '+Docente.0.3  }} </a>
             
 
           {% for fecha in fechas %}
