--- a/src/templates/viaticos.html
+++ b/src/templates/viaticos.html
@@ -25,10 +25,8 @@
                         <td>Nombre</td>
                         <td>Apellido</td>
                         <td>Correo</td>
-                        <td>Obra Interpretada</td>
-                        <td>Personaje Interpretado</td>
+                        <td>Numero de Sesiones</td>
                         <td>Horas de Participacion</td>
-                        <td></td>
                     </tr>
                 </thead>
                 <tbody>
@@ -40,7 +38,6 @@
                         <td>{{ estudiante.3 }} </td>
                         <td>{{ estudiante.4 }} </td>
                         <td>{{ estudiante.5 }} </td>
-                        <td>{{ estudiante.6 }} </td>
                     </tr>
                     {% endfor %}
         
