--- a/src/templates/certificados.html
+++ b/src/templates/certificados.html
@@ -3,7 +3,7 @@
     {% block body %}
     
         <h1>Certificados</h1>
-        <p>Certificados</p>
+        <p>Seleccione un estudiante</p>
 
         <div class="col-md-7">
             {% with messages = get_flashed_messages() %}
@@ -21,8 +21,11 @@
             <table class="table table-striped table-bordered bg-white table-sm">
                 <thead>
                     <tr>
-                        <td>Obra</td>
-                        <td>Participacion</td>
+                        <td>Codigo</td>
+                        <td>Nombre</td>
+                        <td>Correo</td>
+                        <td>Personaje</td>
+                        <td>Horas</td>
                     </tr>
                 </thead>
                 <tbody>
@@ -30,8 +33,15 @@
                     <tr>
                         <td>{{ estudiante.0 }} </td>
                         <td>{{ estudiante.1 }} </td>
+                        <td>{{ estudiante.2 }} </td>
+                        <td>{{ estudiante.3 }} </td>
+                        <td>{{ estudiante.4 }} </td>
                         <td>
-                            <a href="/certificados/{{estudiante.0}}" class="btn btn-secondary">Generar Certificado</a>
+                            <a href={{ "/certi/" + obras.0.1 + "/" + estudiante.0 }} class="btn btn-secondary">Emitir certificado</a>
+                            <!--
+                            <a href="/delete/{{estudiante.0}}" class="btn btn-secondary">Eliminar</a>
+                            -->
+                            
                         </td>
                     </tr>
                     {% endfor %}
