--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -59,11 +59,12 @@
             {% endif %}
             {% endwith %}
 
-            <table class="table table-striped table-bordered bg-white table-sm">
+            <table class="table table-striped table-bordered bg-white table-sm" style="margin-bottom: 50px;">
                 <thead>
                     <tr>
                         <td>Obra</td>
                         <td>Participacion</td>
+                        <td>Estado</td>
                         <td>Opciones</td>
                     </tr>
                 </thead>
@@ -72,6 +73,12 @@
                     <tr>
                         <td>{{ estudiante.1 }} </td>
                         <td>{{ estudiante.2 }} </td>
+                        <td>{% if estudiante.3 == 1 %}
+                            Activa
+                            {% else %}
+                            Inactiva
+                            {% endif %}
+                        </td>
                         <td>
                             
                             {% if botones[loop.index - 1] == 'No Boton' %}
@@ -82,7 +89,7 @@
                                 {% elif botones[loop.index - 1][1] == 'si'%}                                
                                 <a href="/viaticos" class="btn btn-secondary">Viaticos</a>                                
                                 {% elif botones[loop.index - 1][2] == 'si' %}
-                                <a href="/certificados" class="btn btn-secondary">Certificados</a>
+                                <a href = {{ "/certificados/" + estudiante.0 }} class="btn btn-secondary">Certificados</a>
                                 {% else %}
                                 {{botones[loop.index - 1]}}
                                 {% endif %}
@@ -94,7 +101,30 @@
         
                 </tbody>
             </table>
-        
+
+            {% if  botones[0][2]== 'si' %}
+            <h1>Descarga Certificados</h1>
+            <p>Ingrese el codigo de un estudiante y oprima en buscar. Automaticamente se le cargaran las obras del estudiante.</p>
+            <form action="/inicio" method="POST">
+              <label for="codigo">  codigo </label>
+              <div class="form-group" style="margin-bottom: 20px;">
+                  <input type="text" name="codigo" placeholder="codigo" class="form-control">                                                                  
+              </div>
+              <label for="obra">  obra </label>
+              <select name="obra" style="margin-bottom: 20px;">
+                  <option selected value="none">---</option>
+                  {% for opcion in opciones %}
+                  <option value="{{ opcion.0 }}">{{ opcion.1 }}</option>
+                  {% endfor %}
+              </select>
+              <div class="form-group">
+                  <button type="submit" class="btn btn-primary btn-block" style="align-content: center;">Buscar</button>
+              </div>
+            {% endif %}  
+              
+
+              
+          </form>
         </div>
 
     </div>
