--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -14,6 +14,18 @@
 
         <div class="col-md-4 offset-md-4">
             <div class="card card-body">
+
+                {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %}
+                {% endif %}
+                {% endwith %}
+
                 <form action="/login" method="POST">
 
                     <div class="form-group">
